chore: removed unnecessary defensive checks, updated defensive checks and documentation, and tests for high coverage